Java 17 and spring boot updgrade for babel
Issue-ID: AAI-4169
Change-Id: Ia41d74429b16aa902d3381f6f58315006ff4db6a
Signed-off-by: ranjan.kumar@t-systems.com <ranjan.kumar@t-systems.com>